--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,11 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing:antialiased;
+    -moz-osx-smoothing:antialiased;
 }
+
 
 #header {
     height: 120px;
@@ -20,17 +23,25 @@ body{
 
 }
 
+.clearfix{
+    clear: both;
+    float: none;
+}
+
 #logo {
     width: 30%;
     font-size: 30px;
     float: left;
-
+    margin-top: 35px;
 }
+
 
 #logo img {
     display: block;
     float: left;
     height: 60px;
+    margin-top: -10px;
+    margin-right: -3px;
 }
 
 #brand {
@@ -39,3 +50,32 @@ body{
     float: left;
 }
 
+#menu{
+    width: 70%;
+    float: right;
+    font-size: 18px;
+}
+
+#menu ul{
+    line-height: 85px;
+    width: 60%;
+    float: right;
+}
+
+#menu ul li{
+    display: inline-block;
+    list-style: none;
+    height: 46px;
+    margin-left: 18px;
+    margin-right: 18px;
+}
+
+#menu a{
+    text-decoration: none;
+    color: #444;
+    transition: 30ms all;
+}
+
+#menu a:hover{
+    color: #5cc1dd ;
+}
