--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,17 @@ body{
     height: 60px;
     margin-top: -10px;
     margin-right: -3px;
+    animation: girar infinite 30s linear;
+}
+
+@keyframes girar {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+    
 }
 
 #brand {
