--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,3 +140,39 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
     background: #444;
     color: white;
 }
+
+#slider.slider-small{
+    height: 150px;
+}
+
+#slider.slider-small h1{
+    margin-top: 0.2px;
+    padding: 0px;
+    padding-top: 53px;
+    text-align: center;
+}
+
+#content{
+    width: 70%;
+    float: left;
+    min-height: 450px ;
+    margin-right: 20px;
+}
+
+#sidebar{
+    width: 25%;
+    float: left;
+}
+.sidebar-item{
+    background: #f7f7f7;
+    padding: 20px;
+    margin-top: 30px;
+}
+.sidebar-item h3{
+    text-transform: uppercase;
+    font-size: 15px;
+    margin: 0px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 3px solid #eee;
+}
