--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,7 +155,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
 #content{
     width: 70%;
     float: left;
-    min-height: 450px ;
+    min-height: 650px ;
     margin-right: 20px;
 }
 
@@ -170,9 +170,134 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
 }
 .sidebar-item h3{
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 18px;
     margin: 0px;
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 3px solid #eee;
+}
+
+.sidebar-item .btn{
+    margin: 0px auto;
+    margin-top: 10px;
+}
+
+.btn{
+    display: block;
+    background: black;
+    color: white;
+    padding: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 14px;
+    text-decoration: none;
+    transition: 300ms all;
+    border: none;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.btn-success{
+    background: rgb(23, 150, 19);
+}
+
+.btn-success:hover{
+    background: black;
+}
+
+input[type="text"]{
+    width: 100%;
+    height: 30px;
+    border: 1px solid rgb(17, 194, 170);
+    padding: 3px;
+    margin-bottom: 5px;
+    transition: 300ms all;
+    border-radius: 5px;
+}
+
+input[type="text"]:focus{
+    box-shadow: 0px 0px 5px #444 inset;
+}
+
+#footer{
+    background: #f7f7f7;
+    width: 100%;
+    height: 70px;
+    line-height: 65px;
+}
+
+#footer p{
+    margin: 0 px;
+    padding: 0px;
+}
+
+.article-item{
+    width: 100%;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    text-align: left;    
+}
+
+.article-item .image-wrap{
+    width: 130px;
+    height: 130px;
+    overflow: hidden;
+    float: left;
+    margin-right: 15px;
+    border: 1px solid #ccc;
+}
+
+.article-item .image-wrap img{
+    height: 100%;
+    text-align: center;
+}
+
+.article-item h2{
+    display: block;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 7px;
+}
+
+.article-item .date{
+    display: block;
+    width: 100%;
+    color: #001696;
+
+}
+
+.article-item a{
+    display: block;
+    color: #001696;
+    text-decoration: none;
+    margin-top: 10px;
+}
+
+.article-item a:hover{
+    text-decoration: underline;
+}
+
+.subheader{
+    font-size: 38px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+}
+
+.article-detail .image-wrap{
+    float: none;
+    width: 100%;
+    height: 300px;   
+}
+
+.article-detail .image-wrap img{
+   height: 100%;
+   width: 100%;
+}
+
+.article-detail{
+    margin-top: 15px;
+    margin-bottom: 0px;
+    border: none;
 }
