--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -205,9 +205,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3dced', end
     background: black;
 }
 
-input[type="text"]{
+.mid-form{
+    width: 60%;
+    margin: 0px auto;
+}
+
+.mid-form label{
+    display: block;
+    float: left;
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    font-size: 17px;
+}
+
+input[type="text"],
+textarea{
     width: 100%;
-    height: 30px;
+    min-height: 30px;
     border: 1px solid rgb(17, 194, 170);
     padding: 3px;
     margin-bottom: 5px;
@@ -217,6 +232,21 @@ input[type="text"]{
 
 input[type="text"]:focus{
     box-shadow: 0px 0px 5px #444 inset;
+}
+
+textarea{
+    width: 100%;
+    max-width: 100%;
+    max-height: 300px;
+    min-width: 100%;
+    min-height: 150px;
+      
+}
+
+.radiobuttons{
+    margin-top: 10px;
+    float: left;
+    margin-bottom: 15px;
 }
 
 #footer{
