--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -332,43 +332,94 @@ textarea{
     border: none;
 }
 
-
-/*  Responsive (identificar puntos de corte) */
-
-/* desde el pixel 0 hasta el 1488 de pantalla */
-
 @media (max-width: 1488px){
-    /* se ejecutaran los siguientes estilos */
     .center{
         width: 85%;
     }
 }
 
-@media (max-width: 1314px){
-    /* se ejecutaran los siguientes estilos */
+@media (max-width: 1601px){
     .center{
         width: 95%;
     }
+
     #menu ul{
         width: auto;
     }
 }
 
-@media (max-width: 797px){
-    /* se ejecutaran los siguientes estilos */
+@media (max-width: 1077px){
     #logo{
         float: none;
-        width: 240px;
+        width: 303px;
         margin: 0px auto;
+        margin-top: 20px;
+        max-height: 50px;
     }
 
     #menu,
     #menu ul{
-        clear: none;
+        clear: both;
         float: none;
         width: 100%;
         margin: 0px;
         padding: 0px;
         line-height: 43px;
+}
+    #content{
+        float: none;
+        width: 100%;
+    }
+
+    #sidebar{
+        float: none;
+        width: 60%;
+        margin: 0px auto;
+        margin-bottom: 50px;
+    }
+
+    #slider h1{
+        padding-top: 115px;
+        font-size: 20px;
+    }
+
+    .mid-form{
+        width: 70%;
     }
 }
+
+@media (max-width: 541px){
+    #header{
+        min-height: 130px;
+        overflow: hidden;
+        }
+    #menu,
+    #menu ul{
+        line-height: 50px;
+    }
+    #menu ul li{
+        margin-left: 7px;
+        margin-right: 7px;
+    }
+
+    #slider{
+        height: 150px;        
+    }
+
+    #slider h1{
+        font-size: 19px;
+        padding-top: 30px;
+    }
+
+    #slider .btn-white{
+        margin-top: 20px;
+    }
+
+    #slider.slider-small{
+        height: 100px;    
+    }
+
+    #slider.slider-small h1{
+        padding-top: 35px;
+    }
+    }
